--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,19 +10,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Set up Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'npm'
       - name: Create output Parameter(registry, docker tag, Branch and repo name) docker tag then set outputs
         id: vars
         run: | 
