--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,8 +40,8 @@ jobs:
           passphrase: ${{ secrets.DEV_SSH_PASSPHRASE }}
           script: |
             ls -al
-            echo '$hostname'
-            echo 'curl dev-sonarqube.rna.lab'
+            hostname
+            curl dev-sonarqube.rna.lab
       - name: Official SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v1.2.0
         env:
