--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Create vpn conf and ssh keys
         run: | 
           echo ${{ secrets.DEV_OPENVPN_BASE64 }} | base64 -d > ./config.ovpn
@@ -42,7 +44,7 @@ jobs:
             ls -al
             hostname
             curl dev-sonarqube.rna.lab
-      - name: Official SonarQube Scan
+      - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v1.2.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
