Update sonarqube properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=RNA-Wealth_golang-web-demo_AYhhUHb-A6I3JQezyVSX
 sonar.sources=.
 sonar.sourceEncoding=UTF-8
-sonar.host.url=https://dev-sonarqube.rna.lab
+sonar.host.url=https://dev-sonar.rnawealth.com
 sonar.token=sqp_598455d13291088f379a032f4435470c6071c53a
